--- a/ML_Signal_Processing.ipynb
+++ b/ML_Signal_Processing.ipynb
@@ -260,8 +260,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "91f0f23c-86bb-4b1b-b18a-463331b29b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#########################################################################################################\n",
+    "#\n",
+    "#                                Classification of human activity\n",
+    "#      classification of the signals in the Human Activity Recognition Using Smartphones Data Set\n",
+    "#\n",
+    "#########################################################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "322b486e-2b17-4c6a-8711-bf0fb1b46526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##########################################################################################################\n",
+    "#\n",
+    "# loading of the training set into a ndarray of size (7352, 128, 9) and the test set into a ndarray \n",
+    "# of size (2947, 128, 9). As you can guess from the dimensions, the number of signals in the \n",
+    "# training set is 7352 and the number of signals in the test set is 2947. And each signal in the \n",
+    "# training and test set has a length of 128 samples and 9 different components.\n",
+    "#\n",
+    "##########################################################################################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "def read_signals(filename):\n",
+    "    with open(filename, 'r') as fp:\n",
+    "        data = fp.read().splitlines()\n",
+    "        data = map(lambda x: x.rstrip().lstrip().split(), data)\n",
+    "        data = [list(map(float, line)) for line in data]\n",
+    "        data = np.array(data, dtype=np.float32)\n",
+    "    return data\n",
+    "\n",
+    "def read_labels(filename):        \n",
+    "    with open(filename, 'r') as fp:\n",
+    "        activities = fp.read().splitlines()\n",
+    "        activities = list(map(int, activities))\n",
+    "    return np.array(activities)\n",
+    "\n",
+    "INPUT_FOLDER_TRAIN = 'C:/Users/renea/Desktop/UCI_HAR/train/Inertial_Signals/'\n",
+    "INPUT_FOLDER_TEST = 'C:/Users/renea/Desktop/UCI_HAR/test/Inertial_Signals/'\n",
+    "\n",
+    "INPUT_FILES_TRAIN = ['body_acc_x_train.txt', 'body_acc_y_train.txt', 'body_acc_z_train.txt', \n",
+    "                     'body_gyro_x_train.txt', 'body_gyro_y_train.txt', 'body_gyro_z_train.txt',\n",
+    "                     'total_acc_x_train.txt', 'total_acc_y_train.txt', 'total_acc_z_train.txt']\n",
+    "\n",
+    "INPUT_FILES_TEST = ['body_acc_x_test.txt', 'body_acc_y_test.txt', 'body_acc_z_test.txt', \n",
+    "                     'body_gyro_x_test.txt', 'body_gyro_y_test.txt', 'body_gyro_z_test.txt',\n",
+    "                     'total_acc_x_test.txt', 'total_acc_y_test.txt', 'total_acc_z_test.txt']\n",
+    "\n",
+    "train_signals, test_signals = [], []\n",
+    "\n",
+    "for input_file in INPUT_FILES_TRAIN:\n",
+    "    signal = read_signals(INPUT_FOLDER_TRAIN + input_file)\n",
+    "    train_signals.append(signal)\n",
+    "train_signals = np.transpose(np.array(train_signals), (1, 2, 0))\n",
+    "\n",
+    "for input_file in INPUT_FILES_TEST:\n",
+    "    signal = read_signals(INPUT_FOLDER_TEST + input_file)\n",
+    "    test_signals.append(signal)\n",
+    "test_signals = np.transpose(np.array(test_signals), (1, 2, 0))\n",
+    "\n",
+    "\n",
+    "LABELFILE_TRAIN = 'C:/Users/renea/Desktop/UCI_HAR/train/y_train.txt'\n",
+    "LABELFILE_TEST = 'C:/Users/renea/Desktop/UCI_HAR/test/y_test.txt'\n",
+    "train_labels = read_labels(LABELFILE_TRAIN)\n",
+    "test_labels = read_labels(LABELFILE_TEST)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7c63fea3-20f2-4201-930b-a0bbdbddf9bc",
+   "id": "772a394e-cbd1-40ea-a7f6-54cf48499eb5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -272,7 +349,132 @@
    "id": "daebe00e-3986-4dd1-b35c-a7b9ed5213af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "####################################################################################################\n",
+    "#\n",
+    "#  visualize the signal itself with its nine components, the FFT, the PSD and auto-correlation\n",
+    "#  of the components, together with the peaks present in each of the three transformations.\n",
+    "#\n",
+    "#####################################################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "411a0473-c2ef-4474-84b9-90299d6ea1e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'activities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10684/2766660056.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[0mlabel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msignal_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mactivity_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mactivities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'activities' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    " \n",
+    "def get_values(y_values, T, N, f_s):\n",
+    "    y_values = y_values\n",
+    "    x_values = [sample_rate * kk for kk in range(0,len(y_values))]\n",
+    "    return x_values, y_values\n",
+    " \n",
+    "####\n",
+    " \n",
+    "labels = ['x-component', 'y-component', 'z-component']\n",
+    "colors = ['r', 'g', 'b']\n",
+    "suptitle = \"Different signals for the activity: {}\"\n",
+    " \n",
+    "xlabels = ['Time [sec]', 'Freq [Hz]', 'Freq [Hz]', 'Time lag [s]']\n",
+    "ylabel = 'Amplitude'\n",
+    "axtitles = [['Acceleration', 'Gyro', 'Total acceleration'],\n",
+    "            ['FFT acc', 'FFT gyro', 'FFT total acc'],\n",
+    "            ['PSD acc', 'PSD gyro', 'PSD total acc'],\n",
+    "            ['Autocorr acc', 'Autocorr gyro', 'Autocorr total acc']\n",
+    "           ]\n",
+    " \n",
+    "list_functions = [get_values, get_fft_values, get_psd_values, get_autocorr_values]\n",
+    " \n",
+    "N = 128\n",
+    "f_s = 50\n",
+    "t_n = 2.56\n",
+    "T = t_n / N    \n",
+    "\n",
+    "signal_no = 0\n",
+    "signals = train_signals[signal_no, :, :]\n",
+    "label = train_labels[signal_no]\n",
+    "\n",
+    "activity_name = activities[label]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aae6aaa1-9016-4b1d-82b9-3f649860325e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_10684/179776942.py, line 58)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\renea\\AppData\\Local\\Temp/ipykernel_10684/179776942.py\"\u001b[1;36m, line \u001b[1;32m58\u001b[0m\n\u001b[1;33m    if row_no &gt; 0:\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "    \n",
+    "\n",
+    " \n",
+    "f, axarr = plt.subplots(nrows=4, ncols=3, figsize=(12,12))\n",
+    "f.suptitle(suptitle.format(activity_name), fontsize=16)\n",
+    " \n",
+    "for row_no in range(0,4):\n",
+    "    for comp_no in range(0,9):\n",
+    "        col_no = comp_no // 3\n",
+    "        plot_no = comp_no % 3\n",
+    "        color = colors[plot_no]\n",
+    "        label = labels[plot_no]\n",
+    " \n",
+    "        axtitle  = axtitles[row_no][col_no]\n",
+    "        xlabel = xlabels[row_no]\n",
+    "        value_retriever = list_functions[row_no]\n",
+    " \n",
+    "        ax = axarr[row_no, col_no]\n",
+    "        ax.set_title(axtitle, fontsize=16)\n",
+    "        ax.set_xlabel(xlabel, fontsize=16)\n",
+    "        if col_no == 0:\n",
+    "            ax.set_ylabel(ylabel, fontsize=16)\n",
+    " \n",
+    "        signal_component = signals[:, comp_no]\n",
+    "        x_values, y_values = value_retriever(signal_component, T, N, f_s)\n",
+    "        ax.plot(x_values, y_values, linestyle='-', color=color, label=label)\n",
+    "        if row_no &gt; 0:\n",
+    "            max_peak_height = 0.1 * np.nanmax(y_values)\n",
+    "            indices_peaks = detect_peaks(y_values, mph=max_peak_height)\n",
+    "            ax.scatter(x_values[indices_peaks], y_values[indices_peaks], c=color, marker='*', s=60)\n",
+    "        if col_no == 2:\n",
+    "            ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))            \n",
+    "plt.tight_layout()\n",
+    "plt.subplots_adjust(top=0.90, hspace=0.6)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bec2e53-445f-4aed-9fd7-31456ca9f7ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For more information, pleas check :  https://ataspinar.com/2018/04/04/machine-learning-with-signal-processing-techniques/"
+   ]
   }
  ],
  "metadata": {
